--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
   text-align: center;
+  background: black;
+  color: aqua;
+  font-size: 36px;
+  padding: 1rem;
+  font-weight: 600;
 }
 
 .App-logo {
@@ -10,7 +15,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 60vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -22,7 +27,9 @@
 .App-link {
   color: #61dafb;
 }
-
+.compVisible {
+  display: none;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
